--- a/front/portfolio/src/component/AboutMe.module.css
+++ b/front/portfolio/src/component/AboutMe.module.css
@@ -1,18 +1,55 @@
 .aboutMe {
+  display: flex;
+  flex-direction: column;
+}
+
+h3 {
+  color: var(--white);
+  font-family: var(--font);
+  font-size: 2rem;
+  margin-left: 10vw;
+}
+
+.aboutMe p {
+  position: relative;
   color: var(--white);
   font-family: var(--font);
   font-size: 3vh;
-  margin-top: 5vh;
-  margin-left: 30vw;
-  margin-right: 10vw;
+  margin: 0 10vw 5vw;
+  line-height: 2.5rem;
   cursor: default;
-  opacity: 0;
-  transition: opacity ease-out 1s;
+  z-index: 1;
 }
 
-.scrolled {
-  opacity: 1;
-  transition: opacity ease-in 1s;
+.aboutMe span {
+  display: inline-block;
+  position: relative;
+  color: var(--white);
+  font-weight: 700;
+}
+
+.aboutMe span::after,
+.aboutMe span::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 3px;
+  background: linear-gradient(to right, var(--white), var(--blue-1));
+  bottom: -1px;
+  left: 0;
+  transform: scaleX(0);
+  transform-origin: right;
+  transition: transform 0.4s ease-out;
+}
+
+.aboutMe span::before {
+  top: -1px;
+  transform-origin: left;
+}
+
+.aboutMe span:hover::after,
+.aboutMe span:hover::before {
+  transform: scaleX(1);
 }
 
 .pointer {
