--- a/front/portfolio/src/component/Banner.module.css
+++ b/front/portfolio/src/component/Banner.module.css
@@ -58,7 +58,79 @@ h1 {
   color: var(--white);
 }
 
-/* Animation */
+/*Photo*/
+
+.quoteImageContener {
+  display: grid;
+  grid: 2fr 1fr;
+}
+
+.photo,
+.img_blur {
+  position: relative;
+  grid-column: 3;
+  align-self: left;
+  width: 20vw;
+  height: auto;
+  border: 1px solid transparent;
+  border-radius: 50%;
+  box-shadow: 0 0 100px;
+  opacity: 0;
+  animation: fadein 0.5s ease-in-out forwards 1s;
+}
+
+.photo {
+  z-index: 5;
+}
+
+.img_blur {
+  background-color: black;
+  border: 5px solid black;
+  filter: blur(20px);
+  z-index: 4;
+}
+
+.devAs {
+  grid-column: 1 / 3;
+  justify-self: center;
+  margin-top: 20vh;
+  color: var(--white);
+  font-family: var(--font);
+  font-size: 4rem;
+  font-weight: 700;
+  line-height: 1.2;
+  z-index: 7;
+  overflow: hidden;
+}
+
+.bgp {
+  background: linear-gradient(
+    270deg,
+    var(--blue-1),
+    var(--white),
+    var(--blue-1)
+  );
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-position: 200% center;
+  background-size: 200% auto;
+  color: transparent;
+  margin: 0;
+  padding: 0;
+  animation: bgmoving 10s linear infinite, fadein 0.5s ease-in-out forwards 0.5s;
+  opacity: 0;
+  transition: opacity 1s ease-in-out;
+}
+
+/*Animation*/
+
+@keyframes bgmoving {
+  to {
+    background-position: 0% center;
+  }
+}
+
 @keyframes fadeSlideIn {
   to {
     opacity: 1;
@@ -72,16 +144,8 @@ h1 {
   }
 }
 
-/*Photo*/
-
-.photo {
-  position: absolute;
-  right: 15vw;
-  top: 13vw;
-  width: 25vw;
-  height: auto;
-  border: 1px solid transparent;
-  border-radius: 50%;
-  box-shadow: 0 0 100px;
-  animation: fadein e;
+@keyframes fadein {
+  to {
+    opacity: 1;
+  }
 }
