--- a/front/portfolio/src/component/Button.module.css
+++ b/front/portfolio/src/component/Button.module.css
@@ -4,7 +4,7 @@
   justify-content: center;
   width: 5vw;
   height: 60px;
-  margin: 35vw auto 0;
+  margin: 20vh auto 20vh;
   animation: bounce 2s infinite, appear 10s forwards;
   transition: animation ease 0.3s;
   opacity: 0;
