Projets component and first projet video

--- a/front/portfolio/src/App.css
+++ b/front/portfolio/src/App.css
@@ -37,6 +37,7 @@ body {
   --blue-1: #2fbcf9c0;
   --blue-2: #0aa2e8bd;
   --white: rgb(220, 220, 220);
+  --dark-purple: #11031d;
 
   /*Font*/
   --font: "Tomorrow", sans-serif;
