--- a/front/portfolio/src/component/Navbar.module.css
+++ b/front/portfolio/src/component/Navbar.module.css
@@ -3,22 +3,28 @@
   display: flex;
   justify-content: flex-end;
   width: 90%;
-  padding: 0;
-  margin: 0;
+  height: auto;
   gap: 7vw;
   color: var(--white);
   font-family: var(--font);
   font-size: 1.5vw;
   z-index: 99;
+  top: 0;
+  left: 0;
 }
 
 .navbar_bg {
   position: fixed;
-  margin: 0;
-  padding: 0;
   width: 100%;
   height: 5vh;
-  background-color: blue;
+  background: linear-gradient(
+    var(--dark-purple),
+    var(--dark-purple),
+    transparent
+  );
+  z-index: 98;
+  top: 0;
+  left: 0;
 }
 
 .navbar span {
@@ -31,6 +37,8 @@
 .navbar span.one {
   animation: appear ease 2s forwards;
   animation-delay: 0.3s;
+  margin: 0;
+  padding: 0;
 }
 
 .navbar span.two {
