--- a/front/portfolio/src/component/Button.module.css
+++ b/front/portfolio/src/component/Button.module.css
@@ -72,3 +72,24 @@
   transform: translateX(-50%) rotate(-45deg);
   transform-origin: bottom;
 }
+
+/*Arrows Slider*/
+
+.arrowNext,
+.arrowPrev {
+  color: var(--white);
+  font-family: var(--font);
+  font-size: 1rem;
+}
+
+.arrowNext {
+  position: absolute;
+  top: 25vh;
+  right: -5vw;
+}
+
+.arrowPrev {
+  position: absolute;
+  top: 25vh;
+  left: -5vw;
+}
