--- a/front/portfolio/src/component/Projets.module.css
+++ b/front/portfolio/src/component/Projets.module.css
@@ -4,10 +4,9 @@ video {
 }
 
 .projets {
-  width: 50vw;
+  width: 60vw;
   height: auto;
   margin: 0 auto;
-  border-color: red;
 }
 
 .project1,
@@ -15,22 +14,71 @@ video {
 .project3 {
   color: var(--white);
   font-family: var(--font);
-  font-size: 1rem;
-  margin: 1vw 0;
+  font-size: 1.2rem;
+  margin: 1vw;
 }
 
 .project1 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.project1Text {
   margin: 0 auto;
+  width: 45vw;
+  padding: 1vw;
+}
+
+.project1 span {
+  display: inline-block;
+  position: relative;
+  color: var(--white);
+  font-weight: 700;
+}
+
+.project1 span::after,
+.project1 span::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 3px;
+  background: linear-gradient(to right, var(--white), var(--blue-1));
+  bottom: -1px;
+  left: 0;
+  transform: scaleX(0);
+  transform-origin: right;
+  transition: transform 0.4s ease-out;
+}
+
+.project1 span::before {
+  top: -1px;
+  transform-origin: left;
+}
+
+.project1 span:hover::after,
+.project1 span:hover::before {
+  transform: scaleX(1);
+}
+
+video {
+  display: block;
+  margin: 1.5vw auto;
+  max-width: 100%;
+  height: auto;
+  border-radius: 1rem;
+  box-shadow: 0 0 1vw 0.1vw var(--dark-purple);
+  transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+}
+
+video:hover {
+  box-shadow: 0 0 1vw var(--white);
+  transform: scale(1.02);
+  cursor: pointer;
 }
 
 .project2 p,
 .project3 p {
   text-align: center;
-}
-
-video {
-  display: block;
-  margin: 0 auto;
-  max-width: 100%;
-  height: auto;
 }
