--- a/front/portfolio/src/component/Navbar.module.css
+++ b/front/portfolio/src/component/Navbar.module.css
@@ -4,8 +4,8 @@
   justify-content: flex-end;
   width: 90%;
   height: auto;
+  margin: 1vw 0;
   gap: 7vw;
-  color: var(--white);
   font-family: var(--font);
   font-size: 1.5vw;
   z-index: 99;
@@ -16,7 +16,7 @@
 .navbar_bg {
   position: fixed;
   width: 100%;
-  height: 5vh;
+  height: 8vh;
   background: linear-gradient(
     var(--dark-purple),
     var(--dark-purple),
@@ -30,6 +30,8 @@
 .navbar span {
   display: inline-block;
   color: var(--white);
+  font-size: 1.5rem;
+  -webkit-text-stroke: 1px black;
   opacity: 0;
   transition: text-shadow ease-out 0.3s;
 }
