--- a/front/portfolio/src/component/Contact.module.css
+++ b/front/portfolio/src/component/Contact.module.css
@@ -111,6 +111,35 @@
   opacity: 1;
 }
 
+.astContainer {
+  margin-left: 30%;
+}
+
+.astText {
+  cursor: default;
+  margin-left: 3%;
+}
+
+.ast {
+  position: absolute;
+  opacity: 1;
+  font-size: 2rem;
+  transition: text-shadow 0.3s ease, color 0.3s ease-in-out,
+    transform 0.3s ease-in-out;
+  animation: glow 5s infinite;
+}
+
+.ast:hover {
+  cursor: pointer;
+  text-shadow: 0 0 15px var(--white);
+  color: white;
+  transform: scale(1.3);
+}
+
+.ast:active {
+  transform: translate();
+}
+
 @keyframes movingBg {
   0% {
     background-position: 0% 0%;
@@ -120,5 +149,17 @@
   }
   100% {
     background-position: 0% 0%;
+  }
+}
+
+@keyframes glow {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.3);
+  }
+  100% {
+    transform: scale(1);
   }
 }
