--- a/front/portfolio/src/component/Button.module.css
+++ b/front/portfolio/src/component/Button.module.css
@@ -6,13 +6,13 @@
   height: 60px;
   margin: 20vh auto 20vh;
   animation: bounce 2s infinite, appear 10s forwards;
-  transition: animation ease 0.3s;
+  transition: animation ease 0.3s, filter ease 0.3s;
   opacity: 0;
 }
 
 .arrow:hover {
-  transform: scale(1.3);
-  transition: animation ease 0.3s;
+  filter: drop-shadow(0 0 5px var(--white));
+  cursor: pointer;
 }
 
 @keyframes bounce {
@@ -20,7 +20,7 @@
     transform: translateY(0);
   }
   50% {
-    transform: translateY(10px);
+    transform: translateY(2vh);
   }
   100% {
     transform: translateY(0);
