--- a/front/portfolio/src/component/AboutMe.module.css
+++ b/front/portfolio/src/component/AboutMe.module.css
@@ -1,6 +1,7 @@
 .aboutMe {
   display: flex;
   flex-direction: column;
+  opacity: 0;
 }
 
 h3 {
@@ -61,4 +62,37 @@ h3 {
   border-radius: 50%;
   filter: blur(130px);
   pointer-events: none;
+}
+
+@keyframes fadeInUp {
+  from {
+    opacity: 0;
+    transform: translateY(30px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.visible {
+  animation: fadeInUp 2s ease forwards;
+}
+
+@media screen and (max-width: 500px) {
+  h3 {
+    font-size: 1.5rem;
+  }
+  .pointer {
+    filter: blur(100px);
+  }
+  .aboutMe p {
+    font-size: 1rem;
+    line-height: 2rem;
+  }
+  .visible {
+    opacity: 1;
+    transform: translateY(0);
+    transition: opacity 0.6s ease, transform 0.6s ease;
+  }
 }
