--- a/front/portfolio/src/component/Button.module.css
+++ b/front/portfolio/src/component/Button.module.css
@@ -121,3 +121,28 @@
   top: 48%;
   left: -10%;
 }
+
+@media screen and (max-width: 500px) {
+  .arrow {
+    width: 1vw;
+    height: 30px;
+    margin: 5vh auto 50vh;
+  }
+
+  .line1,
+  .line2,
+  .line3,
+  .line4 {
+    width: 1px;
+    height: 30px;
+  }
+  .arrowNext {
+    top: 60%;
+    right: -5%;
+  }
+
+  .arrowPrev {
+    top: 60%;
+    left: -5%;
+  }
+}
