--- a/front/portfolio/src/component/Projets.module.css
+++ b/front/portfolio/src/component/Projets.module.css
@@ -1,8 +1,3 @@
-video {
-  width: 45vw;
-  height: auto;
-}
-
 .projets {
   width: 60vw;
   height: auto;
@@ -63,6 +58,7 @@ video {
 }
 
 video {
+  width: 45vw;
   display: block;
   margin: 1.5vw auto;
   max-width: 100%;
@@ -81,4 +77,54 @@ video:hover {
 .project2 p,
 .project3 p {
   text-align: center;
+}
+
+@keyframes fadeInUp {
+  from {
+    opacity: 0;
+    transform: translateY(30px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.visible {
+  animation: fadeInUp 2s ease forwards;
+}
+
+@media screen and (max-width: 500px) {
+  .projets {
+    width: 80vw;
+    height: auto;
+    margin: 0 auto;
+  }
+  .project2,
+  .project3 {
+    font-size: 0.9rem;
+  }
+  .project1Text h4 {
+    font-size: 0.9rem;
+    line-height: 1rem;
+  }
+  .project1Text p {
+    font-size: 0.7rem;
+    line-height: 1rem;
+  }
+  .project1Text {
+    margin: 0 auto;
+    width: 70vw;
+    padding: 1vw;
+  }
+  video {
+    width: 60vw;
+    margin: 1.5vw auto;
+    border-radius: 10px;
+  }
+  .visible {
+    opacity: 1;
+    transform: translateY(0);
+    transition: opacity 0.6s ease, transform 0.6s ease;
+  }
 }
